--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,6 +23,7 @@
         "name": "next"
       }
     ],
+    
     "paths": {
       "@/*": [
         "./*"
@@ -33,7 +34,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "global.d.ts",
   ],
   "exclude": [
     "node_modules"
